fix problem with horizontal scroll

--- a/css/style.css
+++ b/css/style.css
@@ -386,6 +386,7 @@ legend small {
   opacity: 0;
   width: 0;
   height: 0;
+  display: block;
 }
 
 .upload-table-wrapper {
